--- a/package.json
+++ b/package.json
@@ -1,20 +1,52 @@
 {
-  "name": "flower-backend",
-  "version": "1.0.0",
-  "description": "Express backend for flower info and Naver Shopping integration",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "name": "flowers-detection-pwa",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "cra-template-pwa": "2.0.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.0",
+    "react": "^18.3.1",
+    "react-devtools": "^6.1.2",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
+    "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
+    "web-vitals": "^5.0.1"
   },
-  "engines": {
-    "node": ">=16.0.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
